# indigo

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
indigo/: __init__.py  cli.py  idle.py  input.py  script.py  session.py  vision.py
indigo/core/: __init__.py  delay.py  fatigue.py  recorder.py  replay.py  rng.py  timing.py  windmouse.py
indigo/managers/: __init__.py  runelite.py  vpn.py
scripts/: __init__.py
scripts/agility/: rooftop.py
scripts/firemaking/: bonfire.py
scripts/fishing/: __init__.py  barbarian.py  salmon.py  shrimp.py
scripts/fletching/: stringing.py
scripts/wintertodt/: wintertodt.py
scripts/woodcutting/: __init__.py  oaks.py  trees.py  willows.py  yews.py
